--- a/MyPassionProject.css
+++ b/MyPassionProject.css
@@ -16,6 +16,11 @@ h2 {
 	display: inline-block;
 }
 
-.pictures {
-	display: inline-block;
+.picture {
+	margin: 0 auto;
+	text-align: center;
+}
+
+#meandbro {
+	text-align: center;
 }
